update button copy

--- a/index.html
+++ b/index.html
@@ -11,6 +11,59 @@
 
             }
 
+			.button-3 {
+				appearance: none;
+				background-color: #2ea44f;
+				border: 1px solid rgba(27, 31, 35, .15);
+				border-radius: 6px;
+				box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+				box-sizing: border-box;
+				color: #fff;
+				cursor: pointer;
+				display: inline-block;
+				font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+				font-size: 12px;
+				font-weight: 600;
+				line-height: 16px;
+				padding: 4px 10px;
+				position: relative;
+				text-align: center;
+				text-decoration: none;
+				user-select: none;
+				-webkit-user-select: none;
+				touch-action: manipulation;
+				vertical-align: middle;
+				white-space: nowrap;
+				margin-top: 5px;
+				margin-bottom: 5px;
+			}
+
+				.button-3:focus:not(:focus-visible):not(.focus-visible) {
+				box-shadow: none;
+				outline: none;
+			}
+
+				.button-3:hover {
+				background-color: #2c974b;
+			}
+
+				.button-3:focus {
+				box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+				outline: none;
+			}
+
+				.button-3:disabled {
+				background-color: #94d3a2;
+				border-color: rgba(27, 31, 35, .1);
+				color: rgba(255, 255, 255, .8);
+				cursor: default;
+			}
+
+				.button-3:active {
+				background-color: #298e46;
+				box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+			}
+
         </style>
 
         <meta name='robots' content='noindex, nofollow' />
@@ -19,7 +72,7 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
-	<!-- <meta name="format-detection" content="telephone=no"> -->
+	<meta name="format-detection" content="telephone=no">
 	<meta name="description" content="KLIK UNTUK MEMBUKA UNDANGAN" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="article" />
@@ -1179,6 +1232,11 @@ Ibu Elis Yulia</h2>		</div>
 		</div>
 							</div>
 		</section>
+
+		<div class="elementor-element elementor-element-657234e8 wdp-sticky-section-no ob-has-background-overlay elementor-widget elementor-widget-heading" data-id="657234e8" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;fadeIn&quot;,&quot;_ob_perspektive_use&quot;:&quot;no&quot;,&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_ob_poopart_use&quot;:&quot;yes&quot;,&quot;_ob_shadough_use&quot;:&quot;no&quot;,&quot;_ob_widget_stalker_use&quot;:&quot;no&quot;}" data-widget_type="heading.default">
+			<div class="elementor-widget-container">
+		<h2 class="elementor-heading-title elementor-size-default" style="margin-top: 20px;">Remember that when we are truly our love. Being faithful is not a sacrifice but a joy.</h2>		</div>
+			</div>
 				<!-- <section class="ob-is-breaking-bad ob-bb-inner elementor-section elementor-inner-section elementor-element elementor-element-11a1712 elementor-section-full_width elementor-section-height-default elementor-section-height-default wdp-sticky-section-no" data-id="11a1712" data-element_type="section" data-settings="{&quot;animation_mobile&quot;:&quot;fadeInUp&quot;,&quot;_ob_bbad_use_it&quot;:&quot;yes&quot;,&quot;_ob_bbad_sssic_use&quot;:&quot;no&quot;,&quot;_ob_glider_is_slider&quot;:&quot;no&quot;,&quot;ekit_has_onepagescroll_dot&quot;:&quot;yes&quot;}">
 						<div class="elementor-container elementor-column-gap-no">
 					<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-6204b7cb wdp-sticky-section-no" data-id="6204b7cb" data-element_type="column" data-settings="{&quot;_ob_bbad_is_stalker&quot;:&quot;no&quot;,&quot;_ob_teleporter_use&quot;:false,&quot;_ob_column_has_pseudo&quot;:&quot;no&quot;}">
@@ -1274,9 +1332,13 @@ Ibu Elis Yulia</h2>		</div>
 			<h2 class="elementor-heading-title elementor-size-default">Tanpa mengurangi rasa hormat, bagi Bapak/Ibu/Saudara/i yang ingin memberikan tanda kasih untuk kami bisa melalui:
 				<br>
 				<br>
-				<span onclick="copyToClipboard('7235110733')">BCA 7235110733 / MUGIA AKBAR</span> 
+				<span>BCA 7235110733 / MUGIA AKBAR</span>
 				<br>
-				<span onclick="copyToClipboard('24101610047775')">BTN 24101610047775 / DWI RAHAYU</span>
+				<button class="button-3" onclick="copyToClipboard('7235110733')">Copy</button> 
+				<br>
+				<span>BTN 24101610047775 / DWI RAHAYU</span>
+				<br>
+				<button class="button-3" onclick="copyToClipboard('24101610047775')">Copy</button> 
 			</h2>
 				</div>
 				</div>
@@ -1495,7 +1557,7 @@ Ibu Elis Yulia</h2>		</div>
 		</div>
 							</div>
 		</section>
-				<section class="ob-is-breaking-bad ob-bb-inner elementor-section elementor-inner-section elementor-element elementor-element-6baca94 elementor-section-boxed elementor-section-height-default elementor-section-height-default wdp-sticky-section-no" data-id="6baca94" data-element_type="section" data-settings="{&quot;_ob_bbad_use_it&quot;:&quot;yes&quot;,&quot;_ob_bbad_sssic_use&quot;:&quot;no&quot;,&quot;_ob_glider_is_slider&quot;:&quot;no&quot;,&quot;ekit_has_onepagescroll_dot&quot;:&quot;yes&quot;}">
+				<!-- <section class="ob-is-breaking-bad ob-bb-inner elementor-section elementor-inner-section elementor-element elementor-element-6baca94 elementor-section-boxed elementor-section-height-default elementor-section-height-default wdp-sticky-section-no" data-id="6baca94" data-element_type="section" data-settings="{&quot;_ob_bbad_use_it&quot;:&quot;yes&quot;,&quot;_ob_bbad_sssic_use&quot;:&quot;no&quot;,&quot;_ob_glider_is_slider&quot;:&quot;no&quot;,&quot;ekit_has_onepagescroll_dot&quot;:&quot;yes&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-7293dd74 wdp-sticky-section-no" data-id="7293dd74" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;_ob_bbad_is_stalker&quot;:&quot;no&quot;,&quot;_ob_teleporter_use&quot;:false,&quot;_ob_column_has_pseudo&quot;:&quot;no&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
@@ -1522,7 +1584,7 @@ Ibu Elis Yulia</h2>		</div>
 					</div>
 		</div>
 							</div>
-		</section>
+		</section> -->
 				<div class="elementor-element elementor-element-15c14b19 wdp-sticky-section-no ob-has-background-overlay elementor-widget elementor-widget-heading" data-id="15c14b19" data-element_type="widget" data-settings="{&quot;_ob_perspektive_use&quot;:&quot;no&quot;,&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_ob_poopart_use&quot;:&quot;yes&quot;,&quot;_ob_shadough_use&quot;:&quot;no&quot;,&quot;_ob_widget_stalker_use&quot;:&quot;no&quot;}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 			<h2 class="elementor-heading-title elementor-size-default">Atas perhatian, cinta, dan hadiah Bapak/Ibu/Saudara/i, kami ucapkan banyak-banyak terima kasih.</h2>		</div>
@@ -1916,12 +1978,44 @@ Jawa Barat. 16518</h2>		</div>
 	});
 
 	function copyToClipboard(text) {
+    if (navigator.clipboard && navigator.clipboard.writeText) {
+        // Coba menggunakan Clipboard API
         navigator.clipboard.writeText(text).then(() => {
             alert('Nomor rekening berhasil disalin: ' + text);
         }).catch(err => {
-            alert('Gagal menyalin teks: ' + err);
+            fallbackCopyToClipboard(text); // Gunakan fallback jika gagal
         });
+    } else {
+        // Gunakan fallback jika Clipboard API tidak tersedia
+        fallbackCopyToClipboard(text);
     }
+}
+
+function fallbackCopyToClipboard(text) {
+    // Buat elemen input sementara
+    const input = document.createElement('input');
+    input.value = text;
+    document.body.appendChild(input);
+
+    // Pilih teks di input
+    input.select();
+    input.setSelectionRange(0, 99999); // Untuk perangkat mobile
+
+    try {
+        // Salin teks
+        const success = document.execCommand('copy');
+        if (success) {
+            alert('Nomor rekening berhasil disalin: ' + text);
+        } else {
+            alert('Gagal menyalin teks');
+        }
+    } catch (err) {
+        alert('Gagal menyalin teks: ' + err);
+    }
+
+    // Hapus elemen input
+    document.body.removeChild(input);
+}
 </script>
 <script type='text/javascript' src='https://c0.wp.com/c/5.9/wp-includes/js/comment-reply.min.js' id='comment-reply-js'></script>
 <script type='text/javascript' src='https://c0.wp.com/p/jetpack/10.5.1/_inc/build/photon/photon.min.js' id='jetpack-photon-js'></script>
